--- a/index.html
+++ b/index.html
@@ -1,80 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jollof Rice Recipe</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <!-- ================= Recipe Header ================ -->
     <header>
-        <h1>A Classic Nigerian Jollof Rice</h1>
-        <p>
-            A rich, smoky, and delicious West African rice dish Perfect for parties, gatherings, or a simple
-            <em>comfort meal</em>.
-        </p>
+      <h1>A Classic Nigerian Jollof Rice</h1>
+      <p>
+        A rich, smoky, and delicious West African rice dish. Perfect for
+        parties, gatherings, or a simple <em>comfort meal</em>.
+      </p>
     </header>
 
     <!-- ================= Details Section ================ -->
     <section>
-        <h2>Recipe Details</h2>
-        <ul>
-            <li><strong>Prep Time:</strong> 15 mins</li>
-            <li><strong>Cook Time:</strong> 45 mins</li>
-            <li><strong>Servings:</strong> 4</li>
-            <li><strong>Difficulty:</strong> <u>Easy</u></li>
-        </ul>
+      <h2>Recipe Details</h2>
+      <ul>
+        <li><strong>Prep Time:</strong> 15 mins</li>
+        <li><strong>Cook Time:</strong> 45 mins</li>
+        <li><strong>Servings:</strong> 4</li>
+        <li><strong>Difficulty:</strong> <u>Easy</u></li>
+      </ul>
     </section>
 
     <!-- ================= Image ================ -->
     <section>
-        <h2>Dish Image</h2>
-        <img src="./assets/jollof.jpg" alt="A plate of Nigerian Jollof Rice" width="350" height="220">
+      <h2>Dish Image</h2>
+      <img
+        src="./assets/jollof.jpg"
+        alt="A plate of Nigerian Jollof Rice"
+        width="350"
+        height="220"
+      />
     </section>
 
     <!-- ================= Ingredients ================ -->
     <section>
-        <h2>Ingredients</h2>
-        <ul>
-            <li>3 cups long-grain rice</li>
-            <li>4 large tomatoes</li>
-            <li>1 red bell pepper</li>
-            <li>1 onion</li>
-            <li>2 tbsp tomato paste</li>
-            <li>2 cups chicken stock</li>
-            <li>1 tsp curry powder</li>
-            <li>1 tsp thyme</li>
-        </ul>
+      <h2>Ingredients</h2>
+
+      <h3>Tomato Sauce</h3>
+      <ol>
+        <li>1 large, ripe tomato, cored and quartered</li>
+        <li>1 large red bell pepper, seeded and roughly chopped</li>
+        <li>1 whole habanero pepper, stem removed</li>
+        <li>1 whole Fresno chili or jalapeño, stem removed</li>
+        <li>4 cloves garlic, peeled</li>
+        <li>1 tablespoon minced ginger</li>
+        <li>2 cups water</li>
+      </ol>
+
+      <h3>Rice</h3>
+      <ol>
+        <li>1/3 cup olive oil</li>
+        <li>1 red onion, diced</li>
+        <li>1 teaspoon salt, plus more to taste</li>
+        <li>1/4 cup tomato paste</li>
+        <li>2 tablespoons smoked paprika</li>
+        <li>1 teaspoon curry powder</li>
+        <li>1 teaspoon cumin</li>
+        <li>1 teaspoon dried thyme</li>
+        <li>1/2 teaspoon freshly ground black pepper</li>
+        <li>1/4 teaspoon turmeric</li>
+        <li>2 ¼ cups basmati rice</li>
+        <li>1 bay leaf</li>
+        <li>1 tablespoon chicken bouillon paste</li>
+        <li>1/4 cup chopped green onion (optional)</li>
+        <li>1/4 cup chopped cilantro (optional)</li>
+      </ol>
     </section>
 
     <!-- ================= Instructions ================ -->
     <section>
-        <h2>Instructions</h2>
-        <ol>
-            <li>Blend tomatoes, pepper, and onion into a smooth paste.</li>
-            <li>Heat oil and fry the tomato paste until the raw taste reduces.</li>
-            <li>Add seasonings and chicken stock, then bring to a boil.</li>
-            <li>Pour in washed rice, reduce heat, and allow to cook.</li>
-            <li>Stir occasionally until rice becomes soft and fluffy.</li>
-        </ol>
+      <h2>Instructions</h2>
+      <ol>
+        <li>
+          <p><strong>Step 1</strong></p>
+          Combine tomato, red bell pepper, habanero, Fresno chili, garlic,
+          ginger, and water in a blender. Blend on high until smooth and set
+          aside.
+        </li>
+
+        <li>
+          <p><strong>Step 2</strong></p>
+          Heat olive oil over medium heat. Add onion and salt and sauté until
+          softened. Add tomato paste and cook 2–3 minutes, then add paprika,
+          curry powder, cumin, thyme, pepper, and turmeric.
+        </li>
+
+        <li>
+          <p><strong>Step 3</strong></p>
+          Turn off heat and stir in the rice until coated. Add bay leaf and
+          chicken bouillon paste.
+        </li>
+
+        <li>
+          <p><strong>Step 4</strong></p>
+          Turn heat to high, add the tomato sauce, and bring to a vigorous
+          simmer. Cover tightly, reduce heat to medium-low, and cook for
+          20 minutes without opening the lid.
+        </li>
+
+        <li>
+          <p><strong>Step 5</strong></p>
+          Turn off heat and let rice sit for 12 minutes without lifting the lid.
+        </li>
+
+        <li>
+          <p><strong>Step 6</strong></p>
+          Remove lid and fluff rice with a fork. Garnish with green onions and
+          cilantro if desired.
+        </li>
+      </ol>
     </section>
 
     <!-- ================= Tips Section ================ -->
     <section>
-        <h2>Tips</h2>
-        <p>For a smoky flavor, allow the rice to slightly burn at the bottom. 
-        Also, use basmati rice for a softer texture.</p>
+      <h2>Tips</h2>
+      <ul>
+        <li>
+          For a smoky flavor, allow the rice to slightly burn at the bottom.
+        </li>
+        <li>
+          Adjust heat level by modifying the number of chili peppers in the
+          sauce.
+        </li>
+        <li>
+          If rice seems undercooked, pat it down gently, cover again, and cook
+          on medium-low for 5 more minutes.
+        </li>
+      </ul>
     </section>
 
     <!-- ================= Footer ================ -->
     <footer>
-        <p>Inspired by recipes from 
-            <a href="https://www.africanfoodnetwork.com" target="_blank">African Food Network</a>.
-        </p>
+      <p>
+        Inspired by recipes from
+        <a
+          href="https://www.allrecipes.com/chef-johns-jollof-rice-recipe-7499757"
+          target="_blank"
+        >
+          African Food Network
+        </a>.
+      </p>
 
-        <a href="./nutritions.html">Nutritional information</a>
+      <a href="./nutritions.html">Nutritional information</a>
     </footer>
-
-</body>
+  </body>
 </html>
