--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </p>
     </header>
 
-    <!-- ================= Details Section ================ -->
+    <!-- ================= Recipe Details ================ -->
     <section>
       <h2>Recipe Details</h2>
       <ul>
@@ -27,11 +27,17 @@
       </ul>
     </section>
 
-    <!-- ================= Image ================ -->
+    <!-- ================= Dish Image ================ -->
     <section>
       <h2>Dish Image</h2>
       <img
         src="./assets/jollof.jpg"
+        alt="A plate of Nigerian Jollof Rice"
+        width="350"
+        height="220"
+      />
+      <img
+        src="./assets/jollof-2.jpg"
         alt="A plate of Nigerian Jollof Rice"
         width="350"
         height="220"
@@ -42,8 +48,9 @@
     <section>
       <h2>Ingredients</h2>
 
+      <!-- Tomato Sauce Ingredients -->
       <h3>Tomato Sauce</h3>
-      <ol>
+      <ul>
         <li>1 large, ripe tomato, cored and quartered</li>
         <li>1 large red bell pepper, seeded and roughly chopped</li>
         <li>1 whole habanero pepper, stem removed</li>
@@ -51,10 +58,11 @@
         <li>4 cloves garlic, peeled</li>
         <li>1 tablespoon minced ginger</li>
         <li>2 cups water</li>
-      </ol>
+      </ul>
 
+      <!-- Rice Ingredients -->
       <h3>Rice</h3>
-      <ol>
+      <ul>
         <li>1/3 cup olive oil</li>
         <li>1 red onion, diced</li>
         <li>1 teaspoon salt, plus more to taste</li>
@@ -70,7 +78,7 @@
         <li>1 tablespoon chicken bouillon paste</li>
         <li>1/4 cup chopped green onion (optional)</li>
         <li>1/4 cup chopped cilantro (optional)</li>
-      </ol>
+      </ul>
     </section>
 
     <!-- ================= Instructions ================ -->
@@ -78,41 +86,37 @@
       <h2>Instructions</h2>
       <ol>
         <li>
-          <p><strong>Step 1</strong></p>
-          Combine tomato, red bell pepper, habanero, Fresno chili, garlic,
-          ginger, and water in a blender. Blend on high until smooth and set
-          aside.
+          <strong>Step 1:</strong> Combine tomato, red bell pepper, habanero,
+          Fresno chili, garlic, ginger, and water in a blender. Blend on high
+          until smooth and set aside.
         </li>
 
         <li>
-          <p><strong>Step 2</strong></p>
-          Heat olive oil over medium heat. Add onion and salt and sauté until
-          softened. Add tomato paste and cook 2–3 minutes, then add paprika,
-          curry powder, cumin, thyme, pepper, and turmeric.
+          <strong>Step 2:</strong> Heat olive oil over medium heat. Add onion
+          and salt and sauté until softened. Add tomato paste and cook 2–3
+          minutes, then add paprika, curry powder, cumin, thyme, pepper, and
+          turmeric.
         </li>
 
         <li>
-          <p><strong>Step 3</strong></p>
-          Turn off heat and stir in the rice until coated. Add bay leaf and
-          chicken bouillon paste.
+          <strong>Step 3:</strong> Turn off heat and stir in the rice until
+          coated. Add bay leaf and chicken bouillon paste.
         </li>
 
         <li>
-          <p><strong>Step 4</strong></p>
-          Turn heat to high, add the tomato sauce, and bring to a vigorous
-          simmer. Cover tightly, reduce heat to medium-low, and cook for
-          20 minutes without opening the lid.
+          <strong>Step 4:</strong> Turn heat to high, add the tomato sauce, and
+          bring to a vigorous simmer. Cover tightly, reduce heat to medium-low,
+          and cook for 20 minutes without opening the lid.
         </li>
 
         <li>
-          <p><strong>Step 5</strong></p>
-          Turn off heat and let rice sit for 12 minutes without lifting the lid.
+          <strong>Step 5:</strong> Turn off heat and let rice sit for 12
+          minutes without lifting the lid.
         </li>
 
         <li>
-          <p><strong>Step 6</strong></p>
-          Remove lid and fluff rice with a fork. Garnish with green onions and
-          cilantro if desired.
+          <strong>Step 6:</strong> Remove lid and fluff rice with a fork.
+          Garnish with green onions and cilantro if desired.
         </li>
       </ol>
     </section>
@@ -121,13 +125,8 @@
     <section>
       <h2>Tips</h2>
       <ul>
-        <li>
-          For a smoky flavor, allow the rice to slightly burn at the bottom.
-        </li>
-        <li>
-          Adjust heat level by modifying the number of chili peppers in the
-          sauce.
-        </li>
+        <li>For a smoky flavor, allow the rice to slightly burn at the bottom.</li>
+        <li>Adjust heat level by modifying the number of chili peppers in the sauce.</li>
         <li>
           If rice seems undercooked, pat it down gently, cover again, and cook
           on medium-low for 5 more minutes.
@@ -146,8 +145,9 @@
           African Food Network
         </a>.
       </p>
-
-      <a href="./nutritions.html">Nutritional information</a>
+      <p>
+        <a href="./nutritions.html"><mark>Nutritional information</mark></a>
+      </p>
     </footer>
   </body>
 </html>
