--- a/index.html
+++ b/index.html
@@ -16,138 +16,145 @@
       </p>
     </header>
 
-    <!-- ================= Recipe Details ================ -->
-    <section>
-      <h2>Recipe Details</h2>
-      <ul>
-        <li><strong>Prep Time:</strong> 15 mins</li>
-        <li><strong>Cook Time:</strong> 45 mins</li>
-        <li><strong>Servings:</strong> 4</li>
-        <li><strong>Difficulty:</strong> <u>Easy</u></li>
-      </ul>
-    </section>
+    <main>
+      <!-- ================= Recipe Details ================ -->
+      <section>
+        <h2>Recipe Details</h2>
+        <ul>
+          <li><strong>Prep Time:</strong> 15 mins</li>
+          <li><strong>Cook Time:</strong> 45 mins</li>
+          <li><strong>Servings:</strong> 4</li>
+          <li><strong>Difficulty:</strong> <u>Easy</u></li>
+        </ul>
+      </section>
 
-    <!-- ================= Dish Image ================ -->
-    <section>
-      <h2>Dish Image</h2>
-      <img
-        src="./assets/jollof.jpg"
-        alt="A plate of Nigerian Jollof Rice"
-        width="350"
-        height="220"
-      />
-      <img
-        src="./assets/jollof-2.jpg"
-        alt="A plate of Nigerian Jollof Rice"
-        width="350"
-        height="220"
-      />
-    </section>
+      <!-- ================= Dish Image ================ -->
+      <section>
+        <h2>Dish Image</h2>
+        <img
+          src="./assets/jollof.jpg"
+          alt="A plate of Nigerian Jollof Rice"
+          width="350"
+          height="220"
+        />
+        <img
+          src="./assets/jollof-2.jpg"
+          alt="A plate of Nigerian Jollof Rice"
+          width="350"
+          height="220"
+        />
+      </section>
 
-    <!-- ================= Ingredients ================ -->
-    <section>
-      <h2>Ingredients</h2>
+      <!-- ================= Ingredients ================ -->
+      <section>
+        <h2>Ingredients</h2>
 
-      <!-- Tomato Sauce Ingredients -->
-      <h3>Tomato Sauce</h3>
-      <ul>
-        <li>1 large, ripe tomato, cored and quartered</li>
-        <li>1 large red bell pepper, seeded and roughly chopped</li>
-        <li>1 whole habanero pepper, stem removed</li>
-        <li>1 whole Fresno chili or jalapeño, stem removed</li>
-        <li>4 cloves garlic, peeled</li>
-        <li>1 tablespoon minced ginger</li>
-        <li>2 cups water</li>
-      </ul>
+        <!-- Tomato Sauce Ingredients -->
+        <h3>Tomato Sauce</h3>
+        <ul>
+          <li>1 large, ripe tomato, cored and quartered</li>
+          <li>1 large red bell pepper, seeded and roughly chopped</li>
+          <li>1 whole habanero pepper, stem removed</li>
+          <li>1 whole Fresno chili or jalapeño, stem removed</li>
+          <li>4 cloves garlic, peeled</li>
+          <li>1 tablespoon minced ginger</li>
+          <li>2 cups water</li>
+        </ul>
 
-      <!-- Rice Ingredients -->
-      <h3>Rice</h3>
-      <ul>
-        <li>1/3 cup olive oil</li>
-        <li>1 red onion, diced</li>
-        <li>1 teaspoon salt, plus more to taste</li>
-        <li>1/4 cup tomato paste</li>
-        <li>2 tablespoons smoked paprika</li>
-        <li>1 teaspoon curry powder</li>
-        <li>1 teaspoon cumin</li>
-        <li>1 teaspoon dried thyme</li>
-        <li>1/2 teaspoon freshly ground black pepper</li>
-        <li>1/4 teaspoon turmeric</li>
-        <li>2 ¼ cups basmati rice</li>
-        <li>1 bay leaf</li>
-        <li>1 tablespoon chicken bouillon paste</li>
-        <li>1/4 cup chopped green onion (optional)</li>
-        <li>1/4 cup chopped cilantro (optional)</li>
-      </ul>
-    </section>
+        <!-- Rice Ingredients -->
+        <h3>Rice</h3>
+        <ul>
+          <li>1/3 cup olive oil</li>
+          <li>1 red onion, diced</li>
+          <li>1 teaspoon salt, plus more to taste</li>
+          <li>1/4 cup tomato paste</li>
+          <li>2 tablespoons smoked paprika</li>
+          <li>1 teaspoon curry powder</li>
+          <li>1 teaspoon cumin</li>
+          <li>1 teaspoon dried thyme</li>
+          <li>1/2 teaspoon freshly ground black pepper</li>
+          <li>1/4 teaspoon turmeric</li>
+          <li>2 ¼ cups basmati rice</li>
+          <li>1 bay leaf</li>
+          <li>1 tablespoon chicken bouillon paste</li>
+          <li>1/4 cup chopped green onion (optional)</li>
+          <li>1/4 cup chopped cilantro (optional)</li>
+        </ul>
+      </section>
 
-    <!-- ================= Instructions ================ -->
-    <section>
-      <h2>Instructions</h2>
-      <ol>
-        <li>
-          <strong>Step 1:</strong> Combine tomato, red bell pepper, habanero,
-          Fresno chili, garlic, ginger, and water in a blender. Blend on high
-          until smooth and set aside.
-        </li>
+      <!-- ================= Instructions ================ -->
+      <section>
+        <h2>Instructions</h2>
+        <ol>
+          <li>
+            <strong>Step 1:</strong> Combine tomato, red bell pepper, habanero,
+            Fresno chili, garlic, ginger, and water in a blender. Blend on high
+            until smooth and set aside.
+          </li>
 
-        <li>
-          <strong>Step 2:</strong> Heat olive oil over medium heat. Add onion
-          and salt and sauté until softened. Add tomato paste and cook 2–3
-          minutes, then add paprika, curry powder, cumin, thyme, pepper, and
-          turmeric.
-        </li>
+          <li>
+            <strong>Step 2:</strong> Heat olive oil over medium heat. Add onion
+            and salt and sauté until softened. Add tomato paste and cook 2–3
+            minutes, then add paprika, curry powder, cumin, thyme, pepper, and
+            turmeric.
+          </li>
 
-        <li>
-          <strong>Step 3:</strong> Turn off heat and stir in the rice until
-          coated. Add bay leaf and chicken bouillon paste.
-        </li>
+          <li>
+            <strong>Step 3:</strong> Turn off heat and stir in the rice until
+            coated. Add bay leaf and chicken bouillon paste.
+          </li>
 
-        <li>
-          <strong>Step 4:</strong> Turn heat to high, add the tomato sauce, and
-          bring to a vigorous simmer. Cover tightly, reduce heat to medium-low,
-          and cook for 20 minutes without opening the lid.
-        </li>
+          <li>
+            <strong>Step 4:</strong> Turn heat to high, add the tomato sauce,
+            and bring to a vigorous simmer. Cover tightly, reduce heat to
+            medium-low, and cook for 20 minutes without opening the lid.
+          </li>
 
-        <li>
-          <strong>Step 5:</strong> Turn off heat and let rice sit for 12
-          minutes without lifting the lid.
-        </li>
+          <li>
+            <strong>Step 5:</strong> Turn off heat and let rice sit for 12
+            minutes without lifting the lid.
+          </li>
 
-        <li>
-          <strong>Step 6:</strong> Remove lid and fluff rice with a fork.
-          Garnish with green onions and cilantro if desired.
-        </li>
-      </ol>
-    </section>
+          <li>
+            <strong>Step 6:</strong> Remove lid and fluff rice with a fork.
+            Garnish with green onions and cilantro if desired.
+          </li>
+        </ol>
+      </section>
 
-    <!-- ================= Tips Section ================ -->
-    <section>
-      <h2>Tips</h2>
-      <ul>
-        <li>For a smoky flavor, allow the rice to slightly burn at the bottom.</li>
-        <li>Adjust heat level by modifying the number of chili peppers in the sauce.</li>
-        <li>
-          If rice seems undercooked, pat it down gently, cover again, and cook
-          on medium-low for 5 more minutes.
-        </li>
-      </ul>
-    </section>
+      <!-- ================= Tips Section ================ -->
+      <section>
+        <h2>Tips</h2>
+        <ul>
+          <li>
+            For a smoky flavor, allow the rice to slightly burn at the bottom.
+          </li>
+          <li>
+            Adjust heat level by modifying the number of chili peppers in the
+            sauce.
+          </li>
+          <li>
+            If rice seems undercooked, pat it down gently, cover again, and cook
+            on medium-low for 5 more minutes.
+          </li>
+        </ul>
+      </section>
 
-    <!-- ================= Footer ================ -->
-    <footer>
-      <p>
-        Inspired by recipes from
-        <a
-          href="https://www.allrecipes.com/chef-johns-jollof-rice-recipe-7499757"
-          target="_blank"
-        >
-          African Food Network
-        </a>.
-      </p>
-      <p>
-        <a href="./nutritions.html"><mark>Nutritional information</mark></a>
-      </p>
-    </footer>
+      <!-- ================= Footer ================ -->
+      <footer>
+        <p>
+          Inspired by recipes from
+          <a
+            href="https://www.allrecipes.com/chef-johns-jollof-rice-recipe-7499757"
+            target="_blank"
+          >
+            African Food Network </a
+          >.
+        </p>
+        <p>
+          <a href="./nutritions.html"><mark>Nutritional information</mark></a>
+        </p>
+      </footer>
+    </main>
   </body>
 </html>
