--- a/index.html
+++ b/index.html
@@ -1,160 +1,100 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jollof Rice Recipe</title>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Jollof Rice Recipe</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header class="header">
+    <h1>A Classic Nigerian Jollof Rice</h1>
+    <p>A rich, smoky, and delicious West African rice dish. Perfect for parties, gatherings, or a simple <em>comfort meal</em>.</p>
+  </header>
 
-  <body>
-    <!-- ================= Recipe Header ================ -->
-    <header>
-      <h1>A Classic Nigerian Jollof Rice</h1>
-      <p>
-        A rich, smoky, and delicious West African rice dish. Perfect for
-        parties, gatherings, or a simple <em>comfort meal</em>.
-      </p>
-    </header>
+  <main class="container">
 
-    <main>
-      <!-- ================= Recipe Details ================ -->
-      <section>
-        <h2>Recipe Details</h2>
-        <ul>
-          <li><strong>Prep Time:</strong> 15 mins</li>
-          <li><strong>Cook Time:</strong> 45 mins</li>
-          <li><strong>Servings:</strong> 4</li>
-          <li><strong>Difficulty:</strong> <u>Easy</u></li>
-        </ul>
-      </section>
+    <section class="card">
+      <h2>Recipe Details</h2>
+      <ul>
+        <li><strong>Prep Time:</strong> 15 mins</li>
+        <li><strong>Cook Time:</strong> 45 mins</li>
+        <li><strong>Servings:</strong> 4</li>
+        <li><strong>Difficulty:</strong> <u>Easy</u></li>
+      </ul>
+    </section>
 
-      <!-- ================= Dish Image ================ -->
-      <section>
-        <h2>Dish Image</h2>
-        <img
-          src="./assets/jollof.jpg"
-          alt="A plate of Nigerian Jollof Rice"
-          width="350"
-          height="220"
-        />
-        <img
-          src="./assets/jollof-2.jpg"
-          alt="A plate of Nigerian Jollof Rice"
-          width="350"
-          height="220"
-        />
-      </section>
+    <section class="card images">
+      <h2>Dish Image</h2>
+      <div class="image-grid">
+        <img src="./assets/jollof.jpg" alt="A plate of Nigerian Jollof Rice" />
+        <img src="./assets/jollof-2.jpg" alt="A plate of Nigerian Jollof Rice" />
+      </div>
+    </section>
 
-      <!-- ================= Ingredients ================ -->
-      <section>
-        <h2>Ingredients</h2>
+    <section class="card">
+      <h2>Ingredients</h2>
 
-        <!-- Tomato Sauce Ingredients -->
-        <h3>Tomato Sauce</h3>
-        <ul>
-          <li>1 large, ripe tomato, cored and quartered</li>
-          <li>1 large red bell pepper, seeded and roughly chopped</li>
-          <li>1 whole habanero pepper, stem removed</li>
-          <li>1 whole Fresno chili or jalapeño, stem removed</li>
-          <li>4 cloves garlic, peeled</li>
-          <li>1 tablespoon minced ginger</li>
-          <li>2 cups water</li>
-        </ul>
+      <h3>Tomato Sauce</h3>
+      <ul>
+        <li>1 large, ripe tomato</li>
+        <li>1 large red bell pepper</li>
+        <li>1 whole habanero pepper</li>
+        <li>1 Fresno chili or jalapeño</li>
+        <li>4 cloves garlic</li>
+        <li>1 tbsp minced ginger</li>
+        <li>2 cups water</li>
+      </ul>
 
-        <!-- Rice Ingredients -->
-        <h3>Rice</h3>
-        <ul>
-          <li>1/3 cup olive oil</li>
-          <li>1 red onion, diced</li>
-          <li>1 teaspoon salt, plus more to taste</li>
-          <li>1/4 cup tomato paste</li>
-          <li>2 tablespoons smoked paprika</li>
-          <li>1 teaspoon curry powder</li>
-          <li>1 teaspoon cumin</li>
-          <li>1 teaspoon dried thyme</li>
-          <li>1/2 teaspoon freshly ground black pepper</li>
-          <li>1/4 teaspoon turmeric</li>
-          <li>2 ¼ cups basmati rice</li>
-          <li>1 bay leaf</li>
-          <li>1 tablespoon chicken bouillon paste</li>
-          <li>1/4 cup chopped green onion (optional)</li>
-          <li>1/4 cup chopped cilantro (optional)</li>
-        </ul>
-      </section>
+      <h3>Rice</h3>
+      <ul>
+        <li>1/3 cup olive oil</li>
+        <li>1 red onion, diced</li>
+        <li>1 tsp salt</li>
+        <li>1/4 cup tomato paste</li>
+        <li>2 tbsp smoked paprika</li>
+        <li>1 tsp curry powder</li>
+        <li>1 tsp cumin</li>
+        <li>1 tsp dried thyme</li>
+        <li>1/2 tsp black pepper</li>
+        <li>1/4 tsp turmeric</li>
+        <li>2 ¼ cups basmati rice</li>
+        <li>1 bay leaf</li>
+        <li>1 tbsp chicken bouillon paste</li>
+        <li>Chopped green onion (optional)</li>
+        <li>Chopped cilantro (optional)</li>
+      </ul>
+    </section>
 
-      <!-- ================= Instructions ================ -->
-      <section>
-        <h2>Instructions</h2>
-        <ol>
-          <li>
-            <strong>Step 1:</strong> Combine tomato, red bell pepper, habanero,
-            Fresno chili, garlic, ginger, and water in a blender. Blend on high
-            until smooth and set aside.
-          </li>
+    <section class="card">
+      <h2>Instructions</h2>
+      <ol>
+        <li><strong>Step 1:</strong> Blend peppers, tomato, garlic, ginger, and water until smooth.</li>
+        <li><strong>Step 2:</strong> Cook onions, salt, and tomato paste in oil. Add spices.</li>
+        <li><strong>Step 3:</strong> Stir in rice, add bay leaf and bouillon.</li>
+        <li><strong>Step 4:</strong> Add tomato sauce, simmer, then cook covered.</li>
+        <li><strong>Step 5:</strong> Let rest for 12 minutes.</li>
+        <li><strong>Step 6:</strong> Fluff and garnish.</li>
+      </ol>
+    </section>
 
-          <li>
-            <strong>Step 2:</strong> Heat olive oil over medium heat. Add onion
-            and salt and sauté until softened. Add tomato paste and cook 2–3
-            minutes, then add paprika, curry powder, cumin, thyme, pepper, and
-            turmeric.
-          </li>
+    <section class="card">
+      <h2>Tips</h2>
+      <ul>
+        <li>Let the bottom slightly burn for smokiness.</li>
+        <li>Adjust peppers for heat.</li>
+        <li>If undercooked, cover and cook 5 more minutes.</li>
+      </ul>
+    </section>
 
-          <li>
-            <strong>Step 3:</strong> Turn off heat and stir in the rice until
-            coated. Add bay leaf and chicken bouillon paste.
-          </li>
+    <footer class="footer">
+      <p>Inspired by African Food Network.</p>
+      <p><a href="./nutritions.html"><mark>Nutritional information</mark></a></p>
+    </footer>
 
-          <li>
-            <strong>Step 4:</strong> Turn heat to high, add the tomato sauce,
-            and bring to a vigorous simmer. Cover tightly, reduce heat to
-            medium-low, and cook for 20 minutes without opening the lid.
-          </li>
-
-          <li>
-            <strong>Step 5:</strong> Turn off heat and let rice sit for 12
-            minutes without lifting the lid.
-          </li>
-
-          <li>
-            <strong>Step 6:</strong> Remove lid and fluff rice with a fork.
-            Garnish with green onions and cilantro if desired.
-          </li>
-        </ol>
-      </section>
-
-      <!-- ================= Tips Section ================ -->
-      <section>
-        <h2>Tips</h2>
-        <ul>
-          <li>
-            For a smoky flavor, allow the rice to slightly burn at the bottom.
-          </li>
-          <li>
-            Adjust heat level by modifying the number of chili peppers in the
-            sauce.
-          </li>
-          <li>
-            If rice seems undercooked, pat it down gently, cover again, and cook
-            on medium-low for 5 more minutes.
-          </li>
-        </ul>
-      </section>
-
-      <!-- ================= Footer ================ -->
-      <footer>
-        <p>
-          Inspired by recipes from
-          <a
-            href="https://www.allrecipes.com/chef-johns-jollof-rice-recipe-7499757"
-            target="_blank"
-          >
-            African Food Network </a
-          >.
-        </p>
-        <p>
-          <a href="./nutritions.html"><mark>Nutritional information</mark></a>
-        </p>
-      </footer>
-    </main>
-  </body>
+  </main>
+</body>
 </html>
+
+
