--- a/nutritions.html
+++ b/nutritions.html
@@ -1,34 +1,33 @@
 <html lang="en">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Jollof Rice Nutrition Facts</title>
-<link rel="stylesheet" href="nutrition.css" />
-</head>
-<body class="nutrition-body">
-<header class="header small-header">
-<h1>Nutrition Facts – Jollof Rice</h1>
-<p>A quick breakdown of the nutritional value per serving.</p>
-</header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Jollof Rice Nutrition Facts</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="nutrition.css" />
+  </head>
+  <body class="nutrition-body">
+    <header class="header small-header">
+      <h1>Nutrition Facts – Jollof Rice</h1>
+      <p>A quick breakdown of the nutritional value per serving.</p>
+    </header>
 
+    <main class="container nutrition-container">
+      <section class="card nutrition-card">
+        <h2>Per Serving</h2>
+        <ul>
+          <li><strong>Calories:</strong> 290 kcal</li>
+          <li><strong>Carbohydrates:</strong> 52 g</li>
+          <li><strong>Protein:</strong> 6 g</li>
+          <li><strong>Fat:</strong> 4 g</li>
+          <li><strong>Sodium:</strong> 520 mg</li>
+          <li><strong>Fiber:</strong> 3 g</li>
+        </ul>
+      </section>
 
-<main class="container nutrition-container">
-<section class="card nutrition-card">
-<h2>Per Serving</h2>
-<ul>
-<li><strong>Calories:</strong> 290 kcal</li>
-<li><strong>Carbohydrates:</strong> 52 g</li>
-<li><strong>Protein:</strong> 6 g</li>
-<li><strong>Fat:</strong> 4 g</li>
-<li><strong>Sodium:</strong> 520 mg</li>
-<li><strong>Fiber:</strong> 3 g</li>
-</ul>
-</section>
-
-
-<footer class="footer">
-<p><a href="index.html">← Back to Recipe</a></p>
-</footer>
-</main>
-</body>
+      <footer class="footer">
+        <p><a href="index.html">← Back to Recipe</a></p>
+      </footer>
+    </main>
+  </body>
 </html>
